fix dropdown getting behind other elements

--- a/src/components/presentational/Dropdown/Dropdown.module.css
+++ b/src/components/presentational/Dropdown/Dropdown.module.css
@@ -51,6 +51,7 @@
     border: solid 1px white;
     background-color: inherit;
     width: inherit;
+    z-index: 1000;
 }
 
 ul {
